<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/destination_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/destination_name"/>
            <TextView
                android:id="@+id/destination_gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"
                android:alpha=".5"
                android:text="@string/earth_gravity"/>

        </LinearLayout>

        <Space android:layout_height="64dp"
            android:layout_width="wrap_content"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:textSize="24sp"
            android:gravity="center"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/start_circle_back">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_repeatCount="1"
                android:scaleType="fitCenter"
                />
        </RelativeLayout>

        <Space android:layout_height="64dp"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/start_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/start_name"/>
            <TextView
                android:id="@+id/start_gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:textSize="24sp"
                android:alpha=".5"
                android:text="@string/mars_gravity"/>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="64sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/load_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/load_value_hint"
                android:autofillHints="@null"
                android:textColorHint="?attr/colorOnBackground"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/refresh_button"/>
            <ImageButton
                android:id="@+id/refresh_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_refresh_24"
                android:background="@drawable/start_circle_back"
                app:tint="@color/white"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/load_value"
                android:visibility="gone"
                android:contentDescription="@null"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="?attr/colorOnBackground"
            android:alpha=".6"
            android:text="@string/load_value_description"/>

    </LinearLayout>

</LinearLayout>